# Pacman

./: CMakeLists.txt  README.md  config.hpp  edit  incusb  main.cpp
Camera/: Camera.cpp  Camera.hpp  Detector.cpp  Detector.hpp  xapiocv.cpp
Game/: GameStarter.cpp  GameStarter.hpp  ScoreManager.cpp  ScoreManager.hpp
Game/Games/: ChaseGame.cpp  ChaseGame.hpp  PacmanGame.cpp  PacmanGame.hpp
Grid/: GridManager.cpp  GridManager.hpp  Line.cpp  Line.hpp  Node.cpp  Node.hpp  PathFinder.cpp  PathFinder.hpp
Misc/: Time.cpp  Time.hpp  UnitConverter.cpp  UnitConverter.hpp
Radio/: CommandCenter.cpp  CommandCenter.hpp  CommandGenerator.cpp  CommandGenerator.hpp  TimeoutSerial.cpp  TimeoutSerial.hpp
Robot/: Robot.cpp  Robot.hpp  RobotManager.cpp  RobotManager.hpp
Threads/: CameraThread.cpp  CameraThread.hpp  DetectorThread.cpp  DetectorThread.hpp  InputThread.cpp  InputThread.hpp  RadioThread.cpp  RadioThread.hpp  Thread.cpp  Thread.hpp
demo_videos/: ABOUT.md  demo1.mkv  demo2.mkv  demo3.mkv  demo5.mkv  demo6.mkv  demo7.mkv
wallstest/: walls.py
